Fixed horizontal scroll bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "src/styles/colors.scss";
 @import "src/styles/var.scss";
 #app-main {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     // background-color: $seagween;
     background-image: url("../assets/mushroom-odyssey.jpg");
